Test POST /tasks{task}/markAsUncompleted endpoint and write least amount of code to pass
